<resources>
    <string name="app_name">Visitus</string>
    <string name="action_settings">Settings</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="terms_of_use_description">Настоящее Соглашение определяет условия использования Пользователями материалов и сервисов сайта (далее — «Сайт»).\n \n
1. Общие условия
\n \n
1.1. Использование материалов и сервисов Сайта регулируется нормами действующего законодательства Российской Федерации.\n \n
1.2. Настоящее Соглашение является публичной офертой. Получая доступ к материалам Сайта Пользователь считается присоединившимся к настоящему Соглашению.\n \n
1.3. Администрация Сайта вправе в любое время в одностороннем порядке изменять условия настоящего Соглашения. Такие изменения вступают в силу по истечении 3 (Трех) дней с момента размещения новой версии Соглашения на сайте. При несогласии Пользователя с внесенными изменениями он обязан отказаться от доступа к Сайту, прекратить использование материалов и сервисов Сайта.\n \n
2. Обязательства Пользователя\n \n
2.1. Пользователь соглашается не предпринимать действий, которые могут рассматриваться как нарушающие российское законодательство или нормы международного права, в том числе в сфере интеллектуальной собственности, авторских и/или смежных правах, а также любых действий, которые приводят или могут привести к нарушению нормальной работы Сайта и сервисов Сайта.\n \n
    </string>
    <string name="empty"> </string>
    <string name="enter_to_account">Вход в аккаунт</string>
    <string name="register"> <u>Зарегистрироваться</u> </string>
    <string name="search">search</string>
    <string name="world">world</string>
    <string name="plus">plus</string>
    <string name="sms">sms</string>
    <string name="user">user</string>
    <string name="create_new_account">Создать новый аккаунт</string>
    <string name="email_address">Адрес электронной почты</string>
    <string name="phone_number">Номер телефона (+7XXXXXXXXXX)</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторить пароль</string>
    <string name="begin">Начать</string>
    <string name="register_to_start_travel">Зарегистрируйтесь,   чтобы начать путешествовать</string>
    <string name="enter">Войти</string>
    <string name="agree_with_politics">Согласен с политикой конфидециальности</string>
    <string name="next">Далее</string>
    <string name="login_or_phone">Логин или телефон</string>
    <string name="fill_main_info">Заполните основную информацию</string>
    <string name="profile_type">Тип профиля</string>
    <string name="login">Логин</string>
    <string name="name">Имя</string>
    <string name="city">Город</string>
    <string name="address">Адрес</string>
    <string name="sex">Пол</string>
    <string name="male_gender">Мужской</string>
    <string name="gemale_gender">Женский</string>
    <string name="birthdate">Дата рождения</string>
    <string name="number_of_people_in_family">Количество человек в семье</string>
    <string name="address_or_phone">Адрес электронной почты</string>
    <string name="profile_fullfiled_for_thirty_procent">Профиль заполнен на 30%</string>
    <string name="tell_about_company">Расскажите о компании</string>
    <string name="tell_about_family">Расскажите о семье</string>
    <string name="tell_about_yourself">Расскажите о себе</string>

    <string name="field_of_activity">Сфера деятельности</string>
    <string name="operating_mode">Режим работы</string>
    <string name="enter_working_hours">Введите время работы</string>
    <string name="about_company">О компании</string>
    <string name="education">Образование</string>
    <string name="about_family">О семье</string>
    <string name="marial_status">Семейное положение</string>
    <string name="about_me">Обо мне</string>
    <string name="profile_fill_for_sixty_percent">Профиль заполнен на 60%</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="send_password_instruction">Введите адрес электронной почты или телефон, указанный при регистрации, и мы вышлем Вам инструкцию по восстановлению</string>
    <string name="email_or_phone">Адрес электронной почты или телефон</string>
    <string name="enter_email_or_phone">Введите почту или телефон</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string-array name="account_types">
<!--        <item>Компания</item>-->
<!--        <item>Семейный</item>-->
        <item>Личный</item>
    </string-array>

    <string-array name="operating_modes">
        <item>ПН-ПТ</item>
        <item>ПН-СБ</item>
        <item>ПН-ВСКР</item>
    </string-array>


    <string-array name="marial_statuses">
        <item>Замужем</item>
        <item>Женат</item>
        <item>Холост/Не замужем</item>
    </string-array>
</resources>
